# password-manager

./: data.json  data.txt  main.py  pyproject.toml
